--- a/health_web/src/main/webapp/pages/checkitem.html
+++ b/health_web/src/main/webapp/pages/checkitem.html
@@ -349,7 +349,7 @@
                 handleDelete(row) {
                     var id = row.id;
                     // alert(row.id);
-                    this.$confirm('此操作将永久删除该文件, 是否继续?', '提示', {
+                    this.$confirm('此操作将【永久删除】该文件, 是否继续?', '提示', {
                         confirmButtonText: '确定',
                         cancelButtonText: '取消',
                         type: 'warning'
