--- a/health_web/src/main/webapp/login.html
+++ b/health_web/src/main/webapp/login.html
@@ -11,6 +11,7 @@
         <!-- 引入样式 -->
         <link rel="stylesheet" href="plugins/elementui/index.css">
         <link rel="stylesheet" href="css/login.css">
+        <script src="js/axios-0.18.0.js"></script>
     </head>
     <body class="hold-transition skin-purple sidebar-mini">
         <div id="app">
@@ -26,15 +27,15 @@
                         <span class="svg-container svg-container_login">
                           <span class="user"></span>
                         </span>
-                        <input type="text" name="username" value="admin" placeholder="请输入用户名" />
+                        <input type="text" v-model="username" name="username" value="admin" placeholder="请输入用户名" />
                       </div>
                       <div>
                         <span class="svg-container">
                           <span class="username"></span>
                         </span>
-                        <input type="password" name="password" value="admin" placeholder="请输入密码"/>
+                        <input type="password" v-model="password"  name="password" value="admin" placeholder="请输入密码"/>
                       </div>
-                      <input type="submit" style="width:100%;margin-bottom:30px;" value="登录"></input>
+                      <input type="button" style="width:100%;margin-bottom:30px;" @click=login() value="登录"></input>
                 </form>
                 </div>
               </div>
@@ -43,4 +44,24 @@
     <!-- 引入组件库 -->
     <script src="js/vue.js"></script>
     <script src="plugins/elementui/index.js"></script>
+    <script>
+        var vue = new Vue({
+            el:'#app',
+            data:{
+                username:'admin',
+                password:'admin'
+            },
+            methods:{
+                login(){
+                    axios.post('/login.do?username=' + this.username  + "&password=" + this.password).then(response => {
+                        if(response.data.flag){
+                            window.location.href="/pages/main.html"
+                        }else{
+                            this.$message.error(response.data.message);
+                        }
+                    })
+                }
+            }
+        });
+    </script>
 </html>
