--- a/health_web/src/main/webapp/pages/main.html
+++ b/health_web/src/main/webapp/pages/main.html
@@ -44,7 +44,7 @@
                                 <span style="display:block;">修改密码</span>
                             </el-dropdown-item>
                             <el-dropdown-item divided>
-                                <a href="/logout.do"><span style="display:block;">退出</span></a>
+                                <a href="/logout.do"> <span style="display:block;">退出</span></a>
                             </el-dropdown-item>
                         </el-dropdown-menu>
                     </el-dropdown>
@@ -195,11 +195,11 @@
     $(function() {
         var wd = 200;
         $(".el-main").css('width', $('body').width() - wd + 'px');
-        $.get("/user/getUsername.do",response=>{
-            if(response.flag){
-                vue.loginUsername = response.data;
+        $.get("/user/getUsername.do",res=>{
+            if(res.flag){
+                vue.loginUsername = res.data;
             }else{
-                alert(response.message);
+                alert(res.message);
             }
         });
     });
